# RunOnGPU

./: .gitignore  README.md  pyproject.toml  runongpu.txt
.github/workflows/: ci.yml  publish.yml
runongpu/: cli.py  colab.py  config.py  parser.py
runongpu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_config.py  test_config_persistance.py  test_parser.py  test_template.py
